	* improve piece_deadline/streaming
	* honor pieces with priority 7 in sequential download mode
	* simplified building python bindings
	* make ignore_non_routers more forgiving in the case there are no UPnP
	  devices at a known router. Should improve UPnP compatibility.
	* include reason in peer_blocked_alert
	* support magnet links wrapped in .torrent files
	* rate limiter optimization
	* rate limiter overflow fix (for very high limits)
	* non-auto-managed torrents no longer count against the torrent limits
	* handle DHT error responses correctly
	* allow force_announce to only affect a single tracker
	* add moving_storage field to torrent_status
	* expose UPnP and NAT-PMP mapping in session object
	* DHT refactoring and support for storing arbitrary data with put and get
	* support building on android
	* improved support for web seeds that don't support keep-alive
	* improve DHT routing table to return better nodes (lower RTT and closer
	  to target)
	* don't use pointers to resume_data and file_priorities in
	  add_torrent_params
	* allow moving files to absolute paths, out of the download directory
	* make move_storage more generic to allow both overwriting files as well
	  as taking existing ones
	* fix choking issue at high upload rates
	* optimized rate limiter
	* make disk cache pool allocator configurable
	* fix library ABI to not depend on logging being enabled
	* use hex encoding instead of base32 in create_magnet_uri
	* include name, save_path and torrent_file in torrent_status, for
	  improved performance
	* separate anonymous mode and force-proxy mode, and tighten it up a bit
	* add per-tracker scrape information to announce_entry
	* report errors in read_piece_alert
	* DHT memory optimization
	* improve DHT lookup speed
	* improve support for windows XP and earlier
	* introduce global connection priority for improved swarm performance
	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto